fix projects image z-index

--- a/assets/css/_project-image.scss
+++ b/assets/css/_project-image.scss
@@ -1,6 +1,5 @@
 .project-image {
   position: relative;
-  z-index: -1;
   max-width: 100% !important;
 }
 
